// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migration 20201111162698-init Up should apply migration 1`] = `
{
  "eslintConfig": {
    "env": {
      "browser": true,
    },
    "extends": [
      "plugin:react/recommended",
    ],
    "rules": {
      "react/jsx-uses-react": "off",
      "react/react-in-jsx-scope": "off",
    },
    "settings": {
      "react": {
        "version": "detect",
      },
    },
  },
  "jest": {
    "testEnvironment": "jsdom",
  },
  "license": "MIT",
  "version": "1.0.0",
}
`;

exports[`Migration 20201111162698-init Up should apply migration after core 1`] = `
{
  "eslintConfig": {
    "env": {
      "browser": true,
      "es2021": true,
    },
    "extends": [
      "eslint:recommended",
      "plugin:@typescript-eslint/recommended",
      "plugin:jest/recommended",
      "plugin:react/recommended",
      "prettier",
    ],
    "rules": {
      "react/jsx-uses-react": "off",
      "react/react-in-jsx-scope": "off",
    },
    "settings": {
      "react": {
        "version": "detect",
      },
    },
  },
  "jest": {
    "preset": "ts-jest",
    "testEnvironment": "jsdom",
  },
  "license": "MIT",
  "version": "1.0.0",
}
`;
